# scratchie

./: README (2).md  README.md  Scratch.py  init.py  pyproject.toml  scratchie.py  setup.py
.github/workflows/: workflow.yml
